Fix horizontal scroll on home page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -39,3 +39,7 @@ cdk-virtual-scroll-viewport {
   height: 100%;
   width: 100%;
 }
+
+ion-grid {
+  --ion-grid-width: 280px
+}
